feat: 新增批量更新用户信息
