# internal/handler/v1/user/user_list_handler.go
@@ -1,0 +1,39 @@
+package user
+
+import (
+	"net/http"
+
+	"rank-master-back/internal/logic/v1/user"
+	"rank-master-back/internal/svc"
+	"rank-master-back/internal/types"
+
+	"rank-master-back/infrastructure/pkg/validator"
+
+	"github.com/zeromicro/go-zero/core/logc"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func UserListHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.UpdateUserListReq
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		err := validator.New().StructCtx(r.Context(), req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := user.NewUserListLogic(r.Context(), svcCtx)
+		resp, err := l.UserList(&req)
+		if err != nil {
+			logc.Error(r.Context(), err)
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.OkJsonCtx(r.Context(), w, resp)
+		}
+	}
+}
